Update Dockerfile and requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-mypy
-openai
-python-dotenv
-requests
-pathlib
-moviepy
-pillow
-scipy
-opencv-python
-assemblyai
-srt_equalizer
-tqdm
-fastapi
-uvicorn
+openai==1.11.0
+python-dotenv==0.21.0
+requests==2.31.0
+pathlib==1.0.1
+moviepy==1.0.3
+pillow==9.5.0
+scipy==1.12.0
+opencv-python==4.9.0.80
+assemblyai==0.20.2
+srt_equalizer==0.1.8
+tqdm==4.66.1
+fastapi==0.109.2
+uvicorn==0.27.1
