Add platform specification to docker-compose.yml and update default value for generate_videos() function

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.8"
 services:
   auto-yt-shorts:
+    platform: linux/x86_64
     container_name: auto-yt-shorts
     build: .
     volumes:
