Update configuration and Docker setup; add error handling and notifications for video generation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 OPENAI_API_KEY_AUTO_YT_SHORTS=<YOUR_OPENAI_API_KEY>
 PEXELS_API_KEY=<YOUR_PEXELS_API_KEY>
 ASSEMBLY_AI_API_KEY=<YOUR_ASSEMBLY_AI_API_KEY>
+GEMINI_API_KEY=<YOUR_GEMINI_API_KEY>
+
+CRON_SCHEDULE="0 12 * * *"
+RUN_ONCE="false"
+VIDEO_COUNT="1"
