--- a/example.env
+++ b/example.env
@@ -1,3 +1,33 @@
 OPENAI_API_KEY_AUTO_YT_SHORTS=<KEY>
 PEXELS_API_KEY=<KEY>
 ASSEMBLY_AI_API_KEY=<KEY>
+GEMINI_API_KEY=<KEY>
+
+# Optional: Custom OpenAI base URL (for proxy servers, local models, etc.)
+# OPENAI_BASE_URL=https://api.openai.com/v1
+
+# Optional: Override default models
+# OPENAI_MODEL=gpt-4-turbo-preview
+# GEMINI_TTS_MODEL=gemini-2.5-flash-preview-tts
+
+# Cron schedule for video generation (default: daily at noon UTC)
+# Format: "minute hour day month day_of_week"
+# Examples:
+# - "0 12 * * *" (daily at noon)
+# - "0 */6 * * *" (every 6 hours)
+# - "0 9 * * 1-5" (weekdays at 9 AM)
+CRON_SCHEDULE=0 12 * * *
+
+# Set to "true" to run once on container startup and exit
+RUN_ONCE=false
+
+# Number of videos to generate per run
+VIDEO_COUNT=4
+
+# Apprise URL for notifications (optional)
+# Examples:
+# - Discord: discord://webhook_id/webhook_token
+# - Slack: slack://TokenA/TokenB/TokenC/Channel
+# - Email: mailto://user:pass@gmail.com
+# - Telegram: tgram://bottoken/ChatID
+APPRISE_URL=
