Add NOTIFY_ON_SUCCESS configuration option and update notification logic to conditionally send success notifications based on this setting

--- a/example.env
+++ b/example.env
@@ -31,3 +31,7 @@ VIDEO_COUNT=4
 # - Email: mailto://user:pass@gmail.com
 # - Telegram: tgram://bottoken/ChatID
 APPRISE_URL=
+
+# Set to "true" to receive notifications on successful video generation/upload
+# Default: false (only sends notifications on failures)
+NOTIFY_ON_SUCCESS=false
